--- a/customer_conversion_prediction.ipynb
+++ b/customer_conversion_prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNMJT/ZApH0OEhMt2yi/LyS",
+      "authorship_tag": "ABX9TyO8JGJ1v0I0ZJS0wWRT5N4H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2831,71 +2831,43 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.metrics import accuracy_score, roc_auc_score, plot_roc_curve\n",
-        "from sklearn.model_selection import cross_val_score #this will help me to do cross- validation\n",
-        "import numpy as np\n",
+        "# from sklearn.metrics import accuracy_score, roc_auc_score, plot_roc_curve\n",
+        "# from sklearn.model_selection import cross_val_score #this will help me to do cross- validation\n",
+        "# import numpy as np\n",
         "\n",
-        "for depth in [1,2,3,4,5,6,7,8,9,10,20,50]:\n",
-        "  dt = DecisionTreeClassifier(max_depth=depth) # will tell the DT to not grow past the given threhsold\n",
-        "  # Fit dt to the training set\n",
-        "  dt.fit(X_train, y_train) # the model is trained\n",
-        "  trainAccuracy = accuracy_score(y_train, dt.predict(X_train)) # this is useless information - i am showing to prove a point\n",
-        "  dt = DecisionTreeClassifier(max_depth=depth) # a fresh model which is not trained yet\n",
-        "  valAccuracy = cross_val_score(dt, X_train, y_train, cv=10) # syntax : cross_val_Score(freshModel,fts, target, cv= 10/5)\n",
-        "  print(\"Depth  : \", depth, \" Training Accuracy : \", trainAccuracy, \" Cross val score : \" ,np.mean(valAccuracy))"
+        "# for depth in [1,2,3,4,5,6,7,8,9,10,20,50]:\n",
+        "#   dt = DecisionTreeClassifier(max_depth=depth) # will tell the DT to not grow past the given threhsold\n",
+        "#   # Fit dt to the training set\n",
+        "#   dt.fit(X_train, y_train) # the model is trained\n",
+        "#   trainAccuracy = accuracy_score(y_train, dt.predict(X_train)) # this is useless information - i am showing to prove a point\n",
+        "#   dt = DecisionTreeClassifier(max_depth=depth) # a fresh model which is not trained yet\n",
+        "#   valAccuracy = cross_val_score(dt, X_train, y_train, cv=10) # syntax : cross_val_Score(freshModel,fts, target, cv= 10/5)\n",
+        "#   print(\"Depth  : \", depth, \" Training Accuracy : \", trainAccuracy, \" Cross val score : \" ,np.mean(valAccuracy))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 391
-        },
-        "id": "3_3S99PR3QmP",
-        "outputId": "746bf8b2-4f1a-4fea-82a1-c559d74bfe25"
+        "id": "3_3S99PR3QmP"
       },
-      "execution_count": 70,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ImportError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-70-eb4dd77d0b1a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mroc_auc_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplot_roc_curve\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcross_val_score\u001b[0m \u001b[0;31m#this will help me to do cross- validation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mdepth\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mImportError\u001b[0m: cannot import name 'plot_roc_curve' from 'sklearn.metrics' (/usr/local/lib/python3.9/dist-packages/sklearn/metrics/__init__.py)",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
-        }
-      ]
+      "execution_count": 73,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.tree import DecisionTreeClassifier\n",
+        "# from sklearn.tree import DecisionTreeClassifier\n",
         " \n",
-        "dt = DecisionTreeClassifier()\n",
+        "# dt = DecisionTreeClassifier()\n",
         "\n",
-        "# Fit dt to the training set\n",
-        "dt.fit(X_train, y_train) \n",
+        "# # Fit dt to the training set\n",
+        "# dt.fit(X_train, y_train) \n",
         "\n",
-        "# Predict test set labels\n",
-        "y_pred = dt.predict(X_test)\n",
-        "y_pred"
+        "# # Predict test set labels\n",
+        "# y_pred = dt.predict(X_test)\n",
+        "# y_pred"
       ],
       "metadata": {
         "id": "Or7hAovw2VLy"
       },
-      "execution_count": null,
+      "execution_count": 71,
       "outputs": []
     },
     {
@@ -2910,13 +2882,13 @@
     {
       "cell_type": "code",
       "source": [
-        "dt_auroc = roc_auc_score(y_test, y_pred)\n",
-        "print(\"dt_auroc: \",dt_auroc)"
+        "# dt_auroc = roc_auc_score(y_test, y_pred)\n",
+        "# print(\"dt_auroc: \",dt_auroc)"
       ],
       "metadata": {
         "id": "EWe-4KqG2jos"
       },
-      "execution_count": null,
+      "execution_count": 72,
       "outputs": []
     },
     {
@@ -2925,7 +2897,7 @@
       "metadata": {
         "id": "Q6SIhrhz4KYq"
       },
-      "execution_count": null,
+      "execution_count": 72,
       "outputs": []
     }
   ]
